penukaran poin dengan produk resolve #6

--- a/waste-point/public/css/style.css
+++ b/waste-point/public/css/style.css
@@ -254,7 +254,8 @@ footer hr {
     #managed.card,
     .auth,
     .detail-sampah,
-    .detail-produk {
+    .detail-produk,
+    .exchange {
         width: 100%;
     }
 }
