--- a/waste-point/public/css/style.css
+++ b/waste-point/public/css/style.css
@@ -234,6 +234,10 @@ footer hr {
     width: 120px;
 }
 
+.admin-sampah {
+    width: 150px;
+}
+
 @media screen and (max-width: 992px) {
     #main-view {
         text-align: center;
@@ -255,7 +259,8 @@ footer hr {
     .auth,
     .detail-sampah,
     .detail-produk,
-    .exchange {
+    .exchange,
+    .admin-sampah {
         width: 100%;
     }
 }
