Menampilkan Halaman Blog resolve #15

--- a/waste-point/public/css/style.css
+++ b/waste-point/public/css/style.css
@@ -217,6 +217,10 @@ i#togglePassword {
     color: #212529;
 }
 
+.blog-content {
+    font-size: 17px;
+}
+
 #detail,
 #detail input,
 #detail textarea,
